lang/lc/tests/err_undefined_identifier.sys
int function moo()
{
	zoo
}

system foo()
{
	bar;
	moo();

	attribute health(x) = true;
}
